# ChangeLog for net-libs/farsight2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/farsight2/ChangeLog,v 1.28 2010/02/19 19:12:11 armin76 Exp $

  19 Feb 2010; Raúl Porcel <armin76@gentoo.org> farsight2-0.0.15.ebuild:
  ia64/sparc stable

  19 Feb 2010; Raúl Porcel <armin76@gentoo.org> farsight2-0.0.15.ebuild,
  farsight2-0.0.16.ebuild, farsight2-0.0.17.ebuild:
  Add ~ia64/~sparc

  12 Feb 2010; Joseph Jezak <josejx@gentoo.org> farsight2-0.0.14.ebuild,
  farsight2-0.0.15.ebuild, farsight2-0.0.16.ebuild, farsight2-0.0.17.ebuild:
  Marked ~ppc64.

*farsight2-0.0.17 (24 Jan 2010)

  24 Jan 2010; Olivier Crête <tester@gentoo.org> +farsight2-0.0.17.ebuild:
  Version bump

  18 Jan 2010; Jeroen Roovers <jer@gentoo.org> farsight2-0.0.15.ebuild,
  farsight2-0.0.16.ebuild:
  Marked ~hppa (bug #289662).

  10 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  farsight2-0.0.16.ebuild:
  Transfer Prefix keywords

*farsight2-0.0.16 (20 Dec 2009)

  20 Dec 2009; Olivier Crête <tester@gentoo.org> +farsight2-0.0.16.ebuild:
  Version bump

  20 Dec 2009; Olivier Crête <tester@gentoo.org> farsight2-0.0.15.ebuild:
  Add upnp use flags, bug #297620

  26 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  farsight2-0.0.15.ebuild:
  Keyworded on alpha, bug #289662

  25 Oct 2009; nixnut <nixnut@gentoo.org> farsight2-0.0.14.ebuild:
  ppc stable #289298

  24 Oct 2009; nixnut <nixnut@gentoo.org> farsight2-0.0.14.ebuild:
  ~ppc'd

  19 Oct 2009; Markus Meier <maekke@gentoo.org> farsight2-0.0.14.ebuild:
  amd64 stable, bug #289298

  19 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  farsight2-0.0.14.ebuild:
  stable x86, bug 289298

  18 Oct 2009; Jeroen Roovers <jer@gentoo.org> farsight2-0.0.14.ebuild:
  Stable for HPPA (bug #289298).

  18 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  farsight2-0.0.14.ebuild:
  Stable on alpha, bug #289298

  19 Sep 2009; Olivier Crête <tester@gentoo.org> farsight2-0.0.15.ebuild: