@@ -1,10 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST farsight2-0.0.14.tar.gz 1054752 RMD160 5f8816831fb6790c3185479cca43713fd552d4cd SHA1 2f8b382747efb467cdb9acd833bb88fe9bf02dc8 SHA256 88337ceb368ffb2afa46bd8166352ee594573d7580a936010a01be542d8d4a84
-DIST farsight2-0.0.15.tar.gz 1055749 RMD160 07669ad971096d31f6b192338982bc6888de2b10 SHA1 7edecfce0d3849ffceb6324a6ca63929338b4ccb SHA256 efc4aa28e0720f1c08f6179d40d436968a0a281a85b585bbb1694e5bd24f8ba3
-DIST farsight2-0.0.16.tar.gz 1021466 RMD160 20b7e7f81365aac8147a331a6c49baaadf6f46a9 SHA1 dd25428cb38cc54169db6e8022ed49bc7d609d5b SHA256 69eb10a3e9eda809a7088874640eae7c9084f2c2cbeaee6290f1dcd067b3d21f
 DIST farsight2-0.0.17.tar.gz 1025565 RMD160 bd6238a3376d0448e32fd0c50b80ccb3220132e2 SHA1 6e4b3376b9f33ab659b231bbbb2155d4e1b202cc SHA256 11e5ccaa3e9b4612bb14c0e451e36d20a7db3aac551959924bd034acb62fc06b
 EBUILD farsight2-0.0.14.ebuild 1306 RMD160 dd2dcdfbd3400a3fbff416cedd5cd5f292db5b95 SHA1 35e137247003a78746b9d5119109dcaacd6ad7ea SHA256 0d6e5e4d7f8d1d14803f0141a9b7580099a9917218500269bc275cf0c175dc6b
-EBUILD farsight2-0.0.15.ebuild 1846 RMD160 50aa51a05f8565a24ce2601dde7de0803d941cb0 SHA1 4204e2eab88d3e56a6eca7547a9047c49e7df105 SHA256 17d60733884f28d5ae0a25f5ab783c442aff7f694893e36e26dd6f04e1aee124
-EBUILD farsight2-0.0.16.ebuild 1871 RMD160 5d63ea5a07206dcda226c6a8459cced16c79558f SHA1 ca0066a9588bc7ae277de4a7a272f665ecd04a20 SHA256 9b88c65f8e6de6504abcfdfef72b9292ae537a8e7a3b39b4d1488a0c2f0dd481
 EBUILD farsight2-0.0.17.ebuild 1871 RMD160 442deef4c5b6ec7aa2dce782fb2b753c280fc720 SHA1 315a0c1009b6a6c6bfa774ab5ee040b58650e62c SHA256 a6521ee9618d976a9b570eda53d0327141393b540b9921f76a41ec682cb132c9
-MISC ChangeLog 3653 RMD160 70df1d623d25899942a3a8a473a3286d9b5d55c1 SHA1 94f64cbcf7a278c33d40f0f4eaf2c27b3a5d338d SHA256 f0167bbbc547cedd8df4bcb9f2fccb8884d12df9a5da507690191eb64c1864f0
+MISC ChangeLog 3771 RMD160 b1705de9145d658102dc77560695b01360461ae0 SHA1 f3c56b315e3175a50d505d48469c5ad2d8a5b0d3 SHA256 778f39397e4130da14fab2d08a5dec28ef1b048c8a2179bfe465310add31309b
 MISC metadata.xml 504 RMD160 d73822d85bced317ec8cf49ea602b605fcb6ab34 SHA1 d7f3c77911e2f60373fcd5ef1af45605d56cb0e4 SHA256 7f6a4ae22ee74211672dfacc1bae3006dd7534f9df9c4088f617ba505a7bdfef
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEUEARECAAYFAkvxWGgACgkQmOfEJZHYOKeXZACfQeA5mMdEP86F/UWV9KZKdzTI
+VMwAl3lCVVC361LX7v7/IHBzz4/JKXA=
+=+r94
+-----END PGP SIGNATURE-----
