@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/farsight2
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/farsight2/ChangeLog,v 1.28 2010/02/19 19:12:11 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/farsight2/ChangeLog,v 1.29 2010/05/17 14:53:22 tester Exp $
+
+  17 May 2010; Olivier Crête <tester@gentoo.org> -farsight2-0.0.15.ebuild,
+  -farsight2-0.0.16.ebuild:
+  Cleanup old
 
   19 Feb 2010; Raúl Porcel <armin76@gentoo.org> farsight2-0.0.15.ebuild:
   ia64/sparc stable
